[gd_scene load_steps=4 format=3 uid="uid://bfnoq3u5082mu"]

[ext_resource type="Script" path="res://scripts/inventory_item.gd" id="1_65xgh"]
[ext_resource type="Texture2D" uid="uid://bgqr5804fd62n" path="res://textures/items(low-res).png" id="2_kftls"]

[sub_resource type="CircleShape2D" id="CircleShape2D_soach"]
radius = 8.0

[node name="InventoryItem" type="Node2D" groups=["Inventory_Items"]]
script = ExtResource("1_65xgh")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_soach")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_kftls")
hframes = 5
vframes = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
